--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node ../backend/app.js",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -14,10 +14,13 @@
   "dependencies": {
     "@angular/animations": "^9.1.9",
     "@angular/cdk": "^8.0.0",
+    "@angular/cli": "^9.1.7",
     "@angular/common": "^9.1.9",
     "@angular/compiler": "^9.1.9",
+    "@angular/compiler-cli": "^9.1.9"
     "@angular/core": "^9.1.9",
     "@angular/forms": "^9.1.9",
+    "@angular/http": "^6.0.3",
     "@angular/material": "^8.0.0",
     "@angular/platform-browser": "^9.1.9",
     "@angular/platform-browser-dynamic": "^9.1.9",
@@ -37,8 +40,6 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.7",
-    "@angular/cli": "^9.1.7",
-    "@angular/compiler-cli": "^9.1.9",
     "@angular/language-service": "^9.1.9",
     "@types/jasmine": "~3.3.12",
     "@types/jasminewd2": "~2.0.3",
